--- a/restaurant_app/pubspec.yaml
+++ b/restaurant_app/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   google_fonts: ^2.2.0
   http: ^0.13.4
   provider: ^6.0.2
-  flutter_offline: ^2.0.0
-  connectivity: ^3.0.6
+  flutter_offline: "^2.0.0"
 
 dev_dependencies:
   flutter_test:
