--- a/restaurant_app/pubspec.yaml
+++ b/restaurant_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   flutter_offline: ^2.0.0
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
