--- a/restaurant_app/pubspec.yaml
+++ b/restaurant_app/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   provider: ^6.0.2
   flutter_offline: ^2.0.0
   sqflite: ^2.0.2
+  intl: ^0.17.0
+  android_alarm_manager_plus: ^2.0.3
+  flutter_local_notifications: ^5.0.0
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
